# arpi-gl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
android/: build.gradle  settings.gradle
android-jni/: build.sh
android-jni/jni/: Android.mk  Application.mk  JniGeoEngineCallbacks.cpp  mobi_designmyapp_arpigl_engine_Engine.cpp  mobi_designmyapp_arpigl_engine_Engine.h  mobi_designmyapp_arpigl_engine_Engine_NativeFallthroughEngineListener.cpp  mobi_designmyapp_arpigl_engine_Engine_NativeFallthroughEngineListener.h
android/app/: build.gradle  proguard-rules.pro
android/arpigl/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
assets-test/arpigl/: buildings.json  default.json
assets-test/arpigl/material/: building.json  building2.json  cube_texture.json  damier.json  fallback.json  hud.json  phong.json  poi_robot.json  silhouette_green_rubber.json  silhouette_phong_smooth_green.json  tile.json
assets-test/arpigl/mvt/: a.mvt  b.mvt  c.mvt  d.mvt  vector_tile.proto
assets-test/arpigl/shader/: building.f.glsl  fallback.f.glsl  phong.f.glsl  poi.f.glsl  poi.v.glsl  silhouette-alpha.f.glsl  silhouette.f.glsl  silhouette.v.glsl  simple.f.glsl  simple.v.glsl  skybox.f.glsl  skybox.v.glsl  textured.f.glsl  tile.f.glsl  tile.v.glsl  track.f.glsl
assets/arpigl/material/: phong_blue.json  poi.json  silhouette.json  silhouette_phong_flat_blue.json  silhouette_phong_smooth_blue.json
assets/arpigl/shader/: fallback.v.glsl  gouraud.f.glsl  gouraud.v.glsl  silhouette.v.glsl  skybox.f.glsl  textured.v.glsl  tile.v.glsl
core/include/animation/: Animation.hpp  AnimationComponent.hpp  AnimationSystem.hpp  GeoPathAnimation.hpp  PathAnimation.hpp  RotationAnimation.hpp  SlerpAnimation.hpp  TranslationAnimation.hpp
core/include/async/: TaskScheduler.hpp
core/include/common/: Timer.hpp  Types.hpp
core/include/engine/: Engine.hpp  Entity.hpp  Scene.hpp  TransformComponent.hpp
core/include/geo/: GeoEngine.hpp  GeoEngineCallbacks.hpp  GeoEntity.hpp  GeoSceneManager.hpp  ITileProvider.hpp  LatLng.hpp  LatLngAlt.hpp  OriginListener.hpp  Poi.hpp  PoiFactory.hpp  PoiParams.hpp  Tile.hpp  TileMap.hpp  VectorTile.hpp
core/include/mvt/: Cursor.cpp  GeometryMapper.hpp  PolygonDrawer.hpp
core/include/rendering/: BoundingSphere.hpp  Camera.hpp  FlyThroughCamera.hpp  Frustum.hpp  HUDElement.hpp  HUDSystem.hpp  IndexBuffer.hpp  Light.hpp  Plane.hpp  RenderingComponent.hpp  RenderingEngine.hpp  RenderingPackage.hpp  Selectable.hpp  SkyBox.hpp  Vertex.hpp  VertexBuffer.hpp  VertexElement.hpp
core/include/resource/: CubeMap.hpp  CubeMapManager.hpp  GpuResource.hpp  GpuResourceManagerHandler.hpp  IResourceManager.hpp  Image.hpp  Map.hpp  MapManager.hpp  Material.hpp  MaterialManager.hpp  Mesh.hpp  MeshManager.hpp  Pass.hpp  Quad.hpp  QuadFactory.hpp  Resource.hpp  ResourceManager.hpp  ResourceManagerHandler.hpp  ShaderManager.hpp  ShaderProgram.hpp  Texture.hpp  TextureManager.hpp  TrackFactory.hpp  Watermark.hpp
core/include/shape/: Edge.hpp  GeometryUtils.hpp  ShapeFactory.hpp  ShapeTypes.hpp  Triangle.hpp
core/include/utils/: Color.hpp  ExceptionHandler.hpp  ExceptionType.hpp  ExceptionUtils.hpp  GLES2Logger.hpp  GLUtils.hpp  GeoSceneReader.hpp  GeoUtils.hpp  LocationReader.hpp  Log.hpp  MaterialReader.hpp  ObjReader.hpp  Utils.hpp  VertexIndices.hpp
core/src/animation/: Animation.cpp  AnimationComponent.cpp  AnimationSystem.cpp  GeoPathAnimation.cpp  PathAnimation.cpp  RotationAnimation.cpp  SlerpAnimation.cpp  TranslationAnimation.cpp
core/src/async/: TaskScheduler.cpp
core/src/common/: Timer.cpp
core/src/engine/: Engine.cpp  Entity.cpp  Scene.cpp  TransformComponent.cpp
core/src/geo/: GeoEngine.cpp  GeoEngineCallbacks.cpp  GeoEntity.cpp  GeoSceneManager.cpp  (+6 more)
linux/src/: GeoEngineTest.cpp  GeoEngineTest.h  main.cpp
third/json/: JSON.cpp  JSONValue.cpp
(+368 files in other folders)
